--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "webpack-dev-server": "^4.7.3"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.1",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9"
   }
