--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.1",
     "axios": "^0.25.0",
+    "moment": "^2.29.1",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9"
   }
